--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE Html>
 <html>
 <head>
-    <link  rel = "stylesheet" type="text/css" href="CSSfiles\deco.css">
+    <link  rel = "stylesheet" type="text/css" href="deco.css">
  
 </head>
 <body>
     <a name = "top"></a>
     <title>Whitney Nguyen </title>
     <header><h1> Hello!</h1></header>
-    <p><a href="form-page.html"> Visit our form!</a></p>
+    <p><a href="teapage.htmll"> Visit our form!</a></p>
     <img src="Teacup.jpg">
 
     <h1>We need to know what kind of tea you like.</h1>
