--- a/teapage.html
+++ b/teapage.html
@@ -1,9 +1,9 @@
 <head>
-    <link href="CSSfiles\deco.css" rel = "stylesheet">
+    <link href="deco.css" rel = "stylesheet">
     <header>Welcome to our Survey!</header>
     <title>Whitney Nguyen </title>
     <h2>
-        <p><a href="Intro-page.html"> Return to the start.</a></p>
+        <p><a href="index.html"> Return to the start.</a></p>
     </h2>
 
     <h4>Form to work</h4>
