--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <a name = "top"></a>
     <title>Whitney Nguyen </title>
     <header><h1> Hello!</h1></header>
-    <p><a href="teapage.htmll"> Visit our form!</a></p>
+    <p><a href="teapage.html"> Visit our form!</a></p>
     <img src="Teacup.jpg">
 
     <h1>We need to know what kind of tea you like.</h1>
